# PonyNotes-Xournalpp

./: CMakeLists.txt
libponynotes/: CMakeLists.txt
libponynotes/include/: ponynotes_xournalpp.h
libponynotes/src/: ponynotes_xournalpp.cpp
